--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Git Tutorial</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint amet error quae unde nihil eaque eius, molestias natus delectus excepturi?</p>
+    <ul>
+        <li>List item 1</li>
+        <li>List item 2</li>
+        <li>List item 3</li>
+        <li>List item 4</li>
+    </ul>
 </body>
 </html>
